# Raffle_BOT

./: Cargo.toml  Dockerfile  LICENSE  Readme.md  recipe.json
src/: api_helper.rs  main.rs  model.rs
src/commands/: help.rs  mod.rs  output.rs  raffle.rs  status.rs  ticket.rs
